# ai-trpg

./: .env.example  .gitignore  Makefile  README.md  ecosystem.config.js  mcp_config.json  mypy.ini  pyproject.toml  pytest.ini  replicate_models.json  server_configuration.json
docs/: mcp_prompt_usage_example.md
docs/development-logs/: AWS组织架构说明.md  MCP三大特性设计理念分析.md  MCP工具调用解析机制深度分析.md  游戏流水线pipeline_test1架构分析与提示词优化.md  第一步格式说明.md
scripts/: actor_movement_log_manager.py  agent_utils.py  check_set_types.py  check_unused_imports.py  download_sentence_transformers_models.py  gameplay_handler.py  get_dev_environment_info.py  io_utils.py  mcp_client_init.py  mcp_client_resource_helpers.py  mcp_command_handlers.py  mcp_server_helpers.py  pipeline_actor_observe_and_plan.py  pipeline_actor_self_update.py  pipeline_execute_stage.py  pipeline_kickoff.py  pipeline_observe_and_plan.py  pipeline_stage_execute.py  pipeline_stage_self_update.py  run_azure_openai_chat_client.py  run_azure_openai_chat_server.py  run_deepseek_chat_client.py  run_deepseek_chat_server.py  run_deepseek_mcp_chat_client.py  run_deepseek_rag_chat_client.py  run_deepseek_unified_chat_client.py  run_game_mcp_client.py  run_game_mcp_server.py  run_image_generation_server.py  run_mcp_client.py  run_replicate_chat_client.py  run_replicate_test_text2image.py  run_sample_chat_client.py  run_sample_mcp_client.py  run_sample_mcp_server.py  run_sample_rag_chat_client.py  run_sdg_game_server.py  run_tcg_game_mcp_server.py  run_tcg_game_server.py  run_terminal_sdg_game.py  (+7 more)
src/: __init__.py
src/ai_trpg/: __init__.py
src/ai_trpg/agent/: __init__.py  base.py  manager.py  models.py
src/ai_trpg/auth/: __init__.py
src/ai_trpg/chroma/: __init__.py  client.py
src/ai_trpg/configuration/: game.py
src/ai_trpg/deepseek/: __init__.py  chat_graph.py  client.py  document_retriever.py  mcp_client_graph.py  rag_graph.py
src/ai_trpg/demo/: __init__.py  demo_world.py  knowledge_base.py  models.py  prompt_generators.py  prompts.py  system_messages.py  templates.py  world.py  world1.py  world2.py  world3.py
src/ai_trpg/embedding_model/: __init__.py  sentence_transformer.py
src/ai_trpg/mcp/: __init__.py  client.py  config.py  execution.py  parser.py
src/ai_trpg/mongodb/: __init__.py  boot_document.py  config.py
src/ai_trpg/pgsql/: __init__.py  actor.py  actor_movement_event.py  actor_movement_event_operations.py  actor_operations.py  actor_plan.py  actor_plan_operations.py  attributes.py  base.py  client.py  config.py  effect.py  message.py  message_operations.py  model_registry.py  stage.py  stage_connection.py  stage_operations.py  user.py  user_operations.py  vector_document.py  world.py  world_operations.py
src/ai_trpg/rag/: __init__.py  chroma_game_retriever.py  chroma_knowledge_retrieval.py  knowledge_retrieval.py  pgvector_game_retriever.py  pgvector_knowledge_retrieval.py
src/ai_trpg/utils/: __init__.py  excel.py  json_format.py  md_format.py  user_input.py
src/magic_book/: __init__.py
src/magic_book/auth/: __init__.py  crypt_context.py  jwt.py
src/magic_book/azure_openai_gpt/: __init__.py  chat_graph.py  client.py  mcp_client_graph.py  rag_graph.py  unified_chat_graph.py
src/magic_book/chat_services/: __init__.py  client.py  protocol.py
src/magic_book/configuration/: __init__.py  game.py  server_configuration.py
src/magic_book/deepseek/: __init__.py  chat_graph.py  client.py  mcp_client_graph.py  rag_graph.py  unified_chat_graph.py
src/magic_book/demo/: __init__.py  actor_goblin.py  actor_orc.py  actor_spider.py  actor_training_robot.py  actor_warrior.py  actor_wizard.py  campaign_setting.py  demo_world.py  excel_data.py  excel_data_manager.py  stage_dungeon1.py  stage_dungeon2.py  stage_dungeon3.py  stage_dungeon4.py  stage_dungeon5.py  stage_dungeon6.py  stage_heros_camp.py  test_world.py  utils.py  werewolf_game_world.py  world.py  world_system_test.py
src/magic_book/embedding_model/: __init__.py  config.py  model_loader.py  sentence_transformer.py
src/magic_book/entitas/: __init__.py  collector.py  components.py  context.py  entity.py  event.py  exceptions.py  group.py  matcher.py  processors.py
src/magic_book/game/: __init__.py  config.py  game_data_service.py  game_server.py  game_session.py  player_session.py  room.py  rpg_entity_manager.py  rpg_game.py  rpg_game_pipeline_manager.py  sdg_game.py  sdg_game_process_pipeline.py  tcg_game.py  tcg_game_process_pipeline.py
src/magic_book/mcp/: __init__.py  client.py  execution.py  models.py  prompts.py  response.py
src/magic_book/models/: __init__.py  actions.py  agent_event.py  api.py  character_sheet.py  components.py  dungeon.py  objects.py  registry.py  serialization.py  session_message.py  werewolf_game.py  world.py
src/magic_book/mongodb/: __init__.py  boot_document.py  client.py  config.py  dungeon_document.py  world_document.py
src/magic_book/pgsql/: __init__.py  config.py  user.py
src/magic_book/rag/: __init__.py  game_retriever.py  knowledge_retrieval.py  mock_retriever.py
src/magic_book/redis/: __init__.py  client.py  user.py
src/magic_book/replicate/: __init__.py  config.py  image_tools.py
src/magic_book/services/: __init__.py  actor_details.py  dungeon_gameplay.py  dungeon_state.py  (+9 more)
tests/: __init__.py  conftest.py  demo_entitas_usage.py  test_chromadb_environment.py  test_excel_operations.py
tests/integration/: test_actor_movement_event_operations.py  test_actor_operations.py  test_actor_plan_operations.py  test_chromadb_rag_integration.py  test_entity_context_integration.py  test_json_format_compatibility.py  test_message_operations.py  test_mongodb_connection.py  test_neo4j_connection.py  test_pgvector_comprehensive.py  test_postgresql_connection.py  test_redis_connection.py  test_stage_pathfinding.py  test_world_operations.py
tests/unit/: test_components.py  test_context.py  test_entity.py  test_fixtures.py  test_json_format_functions.py  test_mcp_functionality.py  test_package.py  test_processors.py  test_pydantic_components.py  test_routing_system.py  test_sentence_transformers.py  test_tool_call_parser.py
(+38 files in other folders)
